hphp/hack/test/typecheck/readonly/nested_prop_multifile.php.exp
File "nested_prop_multifile.php", line 23, characters 3-9:
This value is readonly, its properties cannot be modified (Typing[4409])
File "nested_prop_multifile.php", line 25, characters 3-16:
This value is readonly, its properties cannot be modified (Typing[4409])
File "nested_prop_multifile.php", line 27, characters 3-25:
This value is readonly, its properties cannot be modified (Typing[4409])
File "nested_prop_multifile.php", line 28, characters 3-25:
This value is readonly, its properties cannot be modified (Typing[4409])
